2002-07-02  Darin Adler  <darin@apple.com>

        * WebCoreSupport.subproj/IFImageRenderer.m:
        (-[IFImageRenderer incrementalLoadWithBytes:length:complete:]):
	Fixed a syntax error caused by a "just before committing" edit.

2002-07-02  Darin Adler  <darin@apple.com>

	- fixed 2952837 -- image not rendered if height or width attributes specified incorrectly

        * WebCoreSupport.subproj/IFImageRenderer.m:
        (-[IFImageRenderer incrementalLoadWithBytes:length:complete:]):
	Set the size of both the image and the image representation.

2002-07-02  Chris Blumenberg  <cblu@apple.com>

	Can't call startLoading on a frame if setProvisionalDataSource returned NO.

        * Plugins.subproj/IFPluginView.mm:
        (-[IFPluginView loadURL:inTarget:withNotifyData:andHandleAttributes:]):
        * WebCoreSupport.subproj/IFWebCoreFrame.m:
        (-[IFWebCoreFrame loadURL:attributes:flags:withParent:]):
        * WebView.subproj/IFWebView.mm:
        (-[IFWebView performDragOperation:]):

2002-07-02  Chris Blumenberg  <cblu@apple.com>

	Fixed asseration failure caused by an iframe not having a correct mime type.
	We now assume that local files without extensions are html files. 

        * WebView.subproj/IFWebControllerPrivate.mm:
        (+[IFWebController _MIMETypeForFile:]):

2002-07-02  Chris Blumenberg  <cblu@apple.com>

        - Moved all policy methods to IFWebControllerPolicyHandler.h
        - Moved all file URL error checking to WebKit
        - Implemented file URL policy methods
        - Renamed IFContentPolicyOpenExternally to IFContentPolicySaveAndOpenExternally

        * Misc.subproj/IFWebKitErrors.h: Added.
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/IFLocationChangeHandler.h: removed content policy stuff
        * WebView.subproj/IFMainURLHandleClient.mm:
        (-[IFMainURLHandleClient IFURLHandleResourceDidFinishLoading:data:]): IFContentPolicySaveAndOpenExternally rename