@@ -1,3 +1,11 @@
+2002-07-02  Chris Blumenberg  <cblu@apple.com>
+
+	Added IFFileURLPolicyReveal. This makes things a little clearer for the client.
+
+        * WebView.subproj/IFWebControllerPolicyHandler.h:
+        * WebView.subproj/IFWebFramePrivate.mm:
+        (-[IFWebFrame _shouldShowDataSource:]): support for IFFileURLPolicyReveal.
+
 2002-07-02  Darin Adler  <darin@apple.com>
 
         * WebCoreSupport.subproj/IFImageRenderer.m:
